tests/miniJava/pos/000639_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) java [ 0 ] = 0 ; else java = 0 ; } }
