tests/miniJava/neg/002807_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = public int [] java ( ) { return 0 ; } 0 ; } }
